crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__entity_with_trailing_semicolon_2_.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"I'm &notin;\")"
---
[
    Token {
        data: "I'm ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "∉",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
