crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__entity_without_trailing_semicolon_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r#\"I'm &notit\"#)"
---
[
    Token {
        data: "I'm ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "¬",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
