crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__lt_excl_mark_hyphen_in_comment.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<!-- <!-test-->\"####)"
---
[
    Token {
        data: " <!-test",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
