crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__multiple_atts_no_space.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<h a='b'c='d'>\")"
---
[
    Token {
        data: "h",
        attrs: Some(
            {
                "c": Some(
                    (
                        "d",
                        Single,
                    ),
                ),
                "a": Some(
                    (
                        "b",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
